# odin-hel

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/odin_hel/: __init__.py  engine.py  profiles.py
tests/: test_hel_basic.py  test_hel_edge_cases.py  test_input_validation.py  test_json_stability.py
