[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-hel"
version = "0.5.0"
description = "ODIN HEL Policy Engine: allowlist profiles + optional Rego (OPA) evaluation for AI egress governance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name="ODIN Protocol", email="maintainers@odinprotocol.dev" }]
keywords = ["ODIN", "HEL", "policy", "Rego", "OPA", "egress", "governance", "AI security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]

dependencies = []

[project.optional-dependencies]
rego = []

[project.urls]
Homepage = "https://github.com/odin-protocol/odin-hel"
Documentation = "https://github.com/odin-protocol/odin-hel#readme"
Source = "https://github.com/odin-protocol/odin-hel"
Changelog = "https://github.com/odin-protocol/odin-hel/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
odin_hel = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = []
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
